made changes in json looks

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,8 +5,9 @@
         
     </head>
     <body>
-        <img src="https://assets.prestashop2.com/sites/default/files/styles/blog_750x320/public/blog/2019/10/banner_error_404.jpg?itok=eAS4swln"
-         width="100%" height="100%">
-         <a href="http://localhost/memes"><h3>Go back to Home Page</h3></a>
+        <a href="http://localhost:3000/memes"><h3>Go back to Home Page</h3></a>
+        <img src="https://miro.medium.com/max/924/1*ZvwdIQkolJ2z1MILFrQjOQ.jpeg"
+         width="100%" height="70%">
+         
     </body>
 </html>
