--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -9,7 +9,7 @@
         
         <div>
                     <h1>Welcome to XMeme App</h1>
-                    <p>Submit you best memes and lets see</p>
+                    <h3>Submit you best memes and lets see</h3>
                     
                 </div>      
 
