--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,7 +5,7 @@
         
     </head>
     <body>
-        <a href="http://localhost:3000/memes"><h3>Go back to Home Page</h3></a>
+        <a href="/memes"><h3>Go back to Home Page</h3></a>
         <img src="https://miro.medium.com/max/924/1*ZvwdIQkolJ2z1MILFrQjOQ.jpeg"
          width="100%" height="70%">
          
